feat: add block range params to logs endpoint
